Fix the navbar on small screens

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -57,7 +57,8 @@ button.tag {
 
 .navbar {
   margin-bottom: 1rem;
-  padding: 0;
+  padding-top:    0;
+  padding-bottom: 0;
 
   .container {
     padding-bottom: 0 !important;
